--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         </a>                    
                     </div>
                     <div class="home__scroll">
-                    <a href="#" class="button button--flex" download="CV.pdf">
+                    <a href="CV.pdf" class="button button--flex" download="CV.pdf">
                             Download CV<i class="fa-solid fa-download button__icon"></i>
                     </a>
                         <a href="#about" class="home__scroll-button button--flex">
