--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                  <span class="experience__tag">Freelancer</span>
              </div>
              <div class="experience__desc">
-                <ul class="experience__text"><li>I learned vuejs and helped the team with the development of certains characteristics like components, pages, I18n functionability and translations.</li></li></ul>
+                <ul class="experience__text"><li>I helped the team with the development of certains characteristics like components, pages, I18n functionability and translations.</li></li></ul>
                 <ul class="experience__text"><li>I also integrated in the web page an enterprise whatssapp with a plugin, developed responsive designs using bulma and css.</li></ul>
                 <ul class="experience__text"><li>I created databases tables and endpoints using REST, postgres and express.</li></ul>
                 <ul class="experience__text"><li>I contributed my experience to develop components, pages and modals and custom hooks using Reactjs.</li></ul> 
