--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi, I'm Alfredo</h1>
                     <h3 class="home__subtitle"><span class="typed"></span></h3>
-                    <p class="home__description">I develope 💻 creative solutions that improve the business I keep updated with the latest technologies and trends in the industry for creating efficient and scalable aplications 🚀</p>
+                    <p class="home__description">I develop 💻 creative solutions that improve the business I keep updated with the latest technologies and trends in the industry to create efficient and scalable applications 🚀</p>
                     <div class="home__social">
                         <a href="https://www.linkedin.com/in/alfredo-fernandez-lapaix-163564239/" target="_blank" class="home__social-icon">
                             <i class="uil uil-linkedin-alt"></i>  
