--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
                     <img src="img/assets/javascript.png" />
                 </picture>
                 <picture class="skills__img">
+                    <img src="img/assets/python.png" />
+                </picture>
+                <picture class="skills__img">
+                    <img src="img/assets/java.png" />
+                </picture>
+                <picture class="skills__img">
                     <img src="img/assets/react.png" />
                 </picture>
                 <picture class="skills__img">
