--- a/index.html
+++ b/index.html
@@ -146,9 +146,6 @@
                     <img src="img/assets/python.png" />
                 </picture>
                 <picture class="skills__img">
-                    <img src="img/assets/java.png" />
-                </picture>
-                <picture class="skills__img">
                     <img src="img/assets/react.png" />
                 </picture>
                 <picture class="skills__img">
@@ -158,10 +155,19 @@
                     <img src="img/assets/typescript.png" />
                 </picture>
                 <picture class="skills__img">
+                    <img src="img/assets/ruby.png" />
+                </picture>
+                <picture class="skills__img">
                     <img src="img/assets/graphql.png" />
                 </picture>
                 <picture class="skills__img">
                     <img src="img/assets/mongodb.png" />
+                </picture>
+                <picture class="skills__img">
+                    <img src="img/assets/postgres.png" />
+                </picture>
+                <picture class="skills__img">
+                    <img src="img/assets/redis.png" />
                 </picture>
                 <picture class="skills__img">
                     <img src="img/assets/formik.png" />
