--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
                     <img src="img/assets/ruby.png" />
                 </picture>
                 <picture class="skills__img">
+                    <img src="img/assets/rubyonrails.png" />
+                </picture>
+                <picture class="skills__img">
                     <img src="img/assets/graphql.png" />
                 </picture>
                 <picture class="skills__img">
