--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
                 <picture class="skills__img">
                     <img src="img/assets/formik.png" />
                 </picture>
+                <picture class="skills__img">
+                    <img src="img/assets/php.png" />
+                </picture>
                 <picture class="skills__img skills__img--contain">
                     <img src="img/assets/express-original.png" />
                 </picture>
