--- a/index.html
+++ b/index.html
@@ -164,9 +164,6 @@
                     <img src="img/assets/postgres.png" />
                 </picture>
                 <picture class="skills__img">
-                    <img src="img/assets/redis.png" />
-                </picture>
-                <picture class="skills__img">
                     <img src="img/assets/formik.png" />
                 </picture>
                 <picture class="skills__img">
@@ -188,6 +185,17 @@
          <h2 class="section__title">Experience</h2>
          <h3 class="section__subtitle">Companies that I have added value</h3>
          <div class="experience__container wow animate__animated animate__fadeIn" style="text-align: center;">
+            <div class="experience__position">
+                <h4 class="experience__subtitle">Web Developer | On site</h4>
+                <span class="education__date"><i class="fa-solid fa-calendar-days"></i>March-2019 -> Aug-2019</span>
+                <h4 class="experience__title">IDSS</h4>
+                <span class="experience__tag">On site</span>
+            </div>
+            <div class="experience__desc">
+               <ul class="experience__text"><li>I Played a crucial role in maintaining the website with the help of a senior developer I used HTML5, CSS, Javascript, and WordPress. I was occupying the position of data entry clerk but I was transferred to that department at the request of the senior developer to help him maintain the institution's website and with other department tasks.</li></li></ul>
+             </div>    
+        </div>
+         <div class="experience__container wow animate__animated animate__fadeIn" style="text-align: center;">
              <div class="experience__position">
                  <h4 class="experience__subtitle">Full Stack Developer | Remote</h4>
                  <span class="education__date"><i class="fa-solid fa-calendar-days"></i>Jan-2023 -> Jul-2023</span>
@@ -202,6 +210,7 @@
                 <ul class="experience__text"><li>Also I developed some key functionabilities in web page's editor using Reactjs and Redux.</li></ul> 
                 <ul class="experience__text"><li>I implemented responsive design and ensured cross-browser compatibility in the pages and components using css.</li></ul>
                 <ul class="experience__text"><li>I collaborated with cross-functional teams and other developers to create high-quality solutions.</li></ul>
+                <ul class="experience__text"><li>I learned to use aws cloud 9.</li></ul>
               </div>    
          </div>
     </section>
