--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <span class="experience__tag">On site</span>
             </div>
             <div class="experience__desc">
-               <ul class="experience__text"><li>I Played a crucial role in maintaining the website with the help of a senior developer I used HTML5, CSS, Javascript, and WordPress. I was occupying the position of data entry clerk but I was transferred to that department at the request of the senior developer to help him maintain the institution's website and with other department tasks.</li></li></ul>
+               <ul class="experience__text"><li>I Played a crucial role in maintaining the website with the help of a senior developer I used HTML5, CSS, Javascript, and WordPress. I was occupying the position of typer but I was transferred to that department at the request of the senior developer to help him maintain the institution's website and with other department tasks.</li></li></ul>
              </div>    
         </div>
          <div class="experience__container wow animate__animated animate__fadeIn" style="text-align: center;">
