--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <h3 class="home__subtitle"><span class="typed"></span></h3>
                     <p class="home__description">I develop 💻 creative solutions that improve the business I keep updated with the latest technologies and trends in the industry to create efficient and scalable applications 🚀</p>
                     <div class="home__social">
-                        <a href="https://www.linkedin.com/in/alfredo-fernandez-lapaix-163564239/" target="_blank" class="home__social-icon">
+                        <a href="https://www.linkedin.com/in/ramón-alfredo-fernandez-lapaix-163564239/" target="_blank" class="home__social-icon">
                             <i class="uil uil-linkedin-alt"></i>  
                         </a>               
                         <a href="mailto:alfredouiop@gmail.com" target="_blank" class="home__social-icon">
