--- a/index.html
+++ b/index.html
@@ -213,6 +213,18 @@
                 <ul class="experience__text"><li>I learned to use aws cloud 9.</li></ul>
               </div>    
          </div>
+         <div class="experience__container wow animate__animated animate__fadeIn" style="text-align: center;">
+            <div class="experience__position">
+                <h4 class="experience__subtitle">Programmer | Web Developer</h4>
+                <span class="education__date"><i class="fa-solid fa-calendar-days"></i>Aug-2024 -> Active</span>
+                <h4 class="experience__title">Grupo Bonanza</h4>
+                <span class="experience__tag">On site</span>
+            </div>
+            <div class="experience__desc">
+               <ul class="experience__text"><li>Development of innovative projects using specialized tools such as Zoho Creator, Zoho CRM, SQL, SAP, HANA DB Studio, Office 365, and WordPress, among others, with a focus on creating efficient, scalable solutions aligned with business needs.</li></ul>
+               <ul class="experience__text"><li>Continuous maintenance and optimization of websites using technologies such as WordPress and advanced visual builders like Divi and Elementor, as well as specialized platforms like Sana Commerce, ensuring smooth performance, secure updates, and a consistent user experience.</li></ul>              
+             </div>    
+        </div>
     </section>
    <!--Projects-->
     <section class="projects section" id="projects">
